# crapssim

./: .gitignore  pyproject.toml
crapssim/: __init__.py  dice.py  table.py
crapssim/bet/: base.py  pass_line.py
crapssim/strategy/: examples.py
tests/integration/: test_bet.py  test_dicedoctor_integration.py  test_dontpass_integration.py  test_hammerlock_integration.py  test_ironcross_integration.py  test_knockout_integration.py  test_layodds_integration.py  test_pass2come_integration.py  test_passline_integration.py  test_passline_odds2_integration.py  test_passline_odds345_integration.py  test_passline_odds_integration.py  test_risk12_integration.py  test_table_run.py
tests/unit/: test_strategy.py
